[project]
name = "profile-answers"
version = "0.1.0"
description = ""
authors = [
    {name = "OkunrinmetaWebDevelopment", email = "c.okunrinmetrix@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "firebase-admin",
    "pydantic",
    "python-multipart",
    "mangum>=0.17.0",  # Add this for serverless deployment
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

